# cpp-hiredis-cluster

./: .travis.yml  CMakeLists.txt  COPYING  README.md  Vagrantfile
include/: asynchirediscommand.h  cluster.h  clusterexception.h  container.h  disconnectedconnections.h  hirediscommand.h  hiredisprocess.h  slothash.h
include/adapters/: adapter.h  boostasioadapter.h  libeventadapter.h  libuvadapter.h
include/adapters/hiredis-boostasio-adapter/: README  boostasio.hpp
src/examples/: asyncerrorshandling.cpp  asyncexample.cpp  asyncexample_disconnect.cpp  asyncexampleasio.cpp  example.cpp  example_disconnect.cpp  threadpool.cpp  unixsocketexample.cpp
src/examples/hiredis-boostasio-adapter/: boostasio.cpp  boostasio.hpp
src/testing/: clusterdisconnect.cpp  testing.cpp
